test/Fail/Issue3136a.err
Issue3136a.agda:19.18-22: error: [UnequalTerms]
The terms
  x
and
  λ { .R.w → λ { → false } }
are not equal at type R
when checking that the expression refl has type x ≡ f
